--- a/nerin_final_updated/frontend/account.html
+++ b/nerin_final_updated/frontend/account.html
@@ -32,27 +32,259 @@
         </nav>
       </div>
     </header>
-    <main class="container">
-      <h2>Mi cuenta</h2>
-      <section id="mainPanel" class="account-section">
-        <div id="accountInfo"></div>
+    <main class="container account-dashboard">
+      <section class="account-hero">
+        <div class="account-hero__content">
+          <p class="account-hero__tag">Canal mayorista NERIN</p>
+          <h1>Mi cuenta mayorista</h1>
+          <p id="heroSubtitle">
+            Organizá tu crédito, documentos y pedidos desde un único panel.
+          </p>
+          <div class="account-hero__cta">
+            <a href="/shop.html" class="button primary">Ver catálogo mayorista</a>
+            <button type="button" class="button outline" id="downloadStatementBtn">
+              Descargar estado de cuenta
+            </button>
+          </div>
+        </div>
+        <div class="account-hero__stats">
+          <div class="hero-stat">
+            <span class="hero-stat__label">Cliente</span>
+            <span class="hero-stat__value" id="heroName">—</span>
+            <span class="hero-stat__meta" id="heroStatus">Cuenta activa</span>
+          </div>
+          <div class="hero-stat">
+            <span class="hero-stat__label">Saldo actual</span>
+            <span class="hero-stat__value" id="heroBalance">$0</span>
+            <span class="hero-stat__meta" id="heroLimit">Límite $0</span>
+          </div>
+          <div class="hero-stat">
+            <span class="hero-stat__label">Último movimiento</span>
+            <span class="hero-stat__value" id="heroLastMovement">—</span>
+            <span class="hero-stat__meta" id="heroLastOrder">Sin pedidos registrados</span>
+          </div>
+        </div>
       </section>
-      <section id="loyaltySection" class="account-section">
-        <h3>Estado de cliente</h3>
-        <div id="loyaltyCard">
-          <div id="loyaltyLevel"></div>
+
+      <section class="account-section account-card" id="quickActionsSection">
+        <div class="section-header">
+          <div>
+            <p class="eyebrow">Gestión rápida</p>
+            <h2>Acciones principales</h2>
+          </div>
+        </div>
+        <div class="action-grid">
+          <button class="action-tile" type="button" data-action="limit">
+            <span class="action-icon">📈</span>
+            <div>
+              <strong>Solicitar aumento de límite</strong>
+              <p>Compartinos tus datos financieros actualizados.</p>
+            </div>
+          </button>
+          <button class="action-tile" type="button" data-action="statement">
+            <span class="action-icon">📄</span>
+            <div>
+              <strong>Descargar estado de cuenta</strong>
+              <p>Exportá movimientos y facturas en segundos.</p>
+            </div>
+          </button>
+          <button class="action-tile" type="button" data-action="team">
+            <span class="action-icon">🤝</span>
+            <div>
+              <strong>Invitar comprador autorizado</strong>
+              <p>Sumá personas de tu equipo para que gestionen pedidos.</p>
+            </div>
+          </button>
+          <button class="action-tile" type="button" data-action="reminder">
+            <span class="action-icon">⏰</span>
+            <div>
+              <strong>Agendar recordatorio de pago</strong>
+              <p>Definí alertas internas para tus vencimientos.</p>
+            </div>
+          </button>
+        </div>
+      </section>
+
+      <section class="account-panels">
+        <article class="account-card account-card--credit" id="creditCard">
+          <div class="card-header">
+            <h3>Crédito disponible</h3>
+            <span class="badge" id="creditStatusBadge">Al día</span>
+          </div>
+          <div class="credit-overview">
+            <div class="credit-gauge" id="creditGauge" data-usage="0%"></div>
+            <div class="credit-details">
+              <p class="credit-amount" id="creditBalance">$0</p>
+              <p class="credit-available">
+                Disponible: <strong id="creditAvailable">$0</strong>
+              </p>
+              <div class="progress-bar">
+                <div class="progress" id="creditUsageBar"></div>
+              </div>
+              <p class="microcopy" id="creditUsageLabel">0% del límite utilizado.</p>
+            </div>
+          </div>
+          <ul class="card-list">
+            <li id="nextReview">Próxima revisión de cuenta: —</li>
+            <li id="paymentRecommendation">No hay pagos pendientes.</li>
+          </ul>
+        </article>
+
+        <article class="account-card account-card--documents" id="documentsCard">
+          <div class="card-header">
+            <h3>Documentación fiscal</h3>
+            <p class="helper-text" id="documentSummary">
+              0 de 4 documentos recibidos.
+            </p>
+          </div>
+          <ul class="document-list" id="documentChecklist">
+            <li>
+              <label class="doc-toggle">
+                <input type="checkbox" data-doc-check="afip" />
+                <span>
+                  <strong>Constancia AFIP</strong>
+                  <small>Última actualización de responsable inscripto.</small>
+                </span>
+              </label>
+              <span class="doc-chip" data-doc-status="afip">Pendiente</span>
+            </li>
+            <li>
+              <label class="doc-toggle">
+                <input type="checkbox" data-doc-check="iva" />
+                <span>
+                  <strong>Padrón IVA</strong>
+                  <small>Necesario para facturación exenta o M.</small>
+                </span>
+              </label>
+              <span class="doc-chip" data-doc-status="iva">Pendiente</span>
+            </li>
+            <li>
+              <label class="doc-toggle">
+                <input type="checkbox" data-doc-check="bank" />
+                <span>
+                  <strong>Datos bancarios</strong>
+                  <small>CBU/CVU para devoluciones y notas de crédito.</small>
+                </span>
+              </label>
+              <span class="doc-chip" data-doc-status="bank">Pendiente</span>
+            </li>
+            <li>
+              <label class="doc-toggle">
+                <input type="checkbox" data-doc-check="agreement" />
+                <span>
+                  <strong>Contrato de revendedor</strong>
+                  <small>Firmado digitalmente por el titular de la cuenta.</small>
+                </span>
+              </label>
+              <span class="doc-chip" data-doc-status="agreement">Pendiente</span>
+            </li>
+          </ul>
+          <p class="microcopy">
+            Marcá los documentos que ya enviaste para llevar un control interno. Un asesor los validará dentro de las 24 hs hábiles.
+          </p>
+        </article>
+
+        <article class="account-card account-card--team" id="teamCard">
+          <div class="card-header">
+            <h3>Compradores autorizados</h3>
+            <p class="helper-text">
+              Gestioná quién puede confirmar pedidos y usar tu crédito.
+            </p>
+          </div>
+          <ul class="pill-list" id="authorizedBuyersList">
+            <li class="empty">Todavía no agregaste compradores.</li>
+          </ul>
+          <form id="authorizedBuyerForm" class="inline-form">
+            <div class="form-row">
+              <label for="buyerName">Nombre y apellido</label>
+              <input type="text" id="buyerName" autocomplete="name" />
+            </div>
+            <div class="form-row">
+              <label for="buyerEmail">Correo corporativo</label>
+              <input type="email" id="buyerEmail" autocomplete="email" />
+            </div>
+            <div class="form-row">
+              <label for="buyerPhone">Teléfono</label>
+              <input type="tel" id="buyerPhone" autocomplete="tel" />
+            </div>
+            <button type="submit" class="button primary small">
+              Invitar comprador
+            </button>
+          </form>
+        </article>
+
+        <article class="account-card account-card--reminders" id="remindersCard">
+          <div class="card-header">
+            <h3>Recordatorios de pago</h3>
+            <p class="helper-text">
+              Agendá compromisos de pago para evitar bloqueos de crédito.
+            </p>
+          </div>
+          <ul class="timeline" id="reminderList">
+            <li class="empty">Sin recordatorios programados.</li>
+          </ul>
+          <form id="reminderForm" class="inline-form">
+            <div class="form-row">
+              <label for="reminderDate">Fecha límite</label>
+              <input type="date" id="reminderDate" />
+            </div>
+            <div class="form-row">
+              <label for="reminderAmount">Importe estimado</label>
+              <input type="number" id="reminderAmount" min="0" step="0.01" />
+            </div>
+            <div class="form-row">
+              <label for="reminderNotes">Notas internas</label>
+              <input type="text" id="reminderNotes" maxlength="120" />
+            </div>
+            <button type="submit" class="button secondary small">
+              Crear recordatorio
+            </button>
+          </form>
+        </article>
+      </section>
+
+      <section class="account-card" id="timelineSection">
+        <div class="card-header">
+          <h3>Actividad reciente</h3>
+        </div>
+        <ol class="timeline timeline--dense" id="timelineList">
+          <li class="empty">Aún no registramos movimientos.</li>
+        </ol>
+      </section>
+
+      <section id="loyaltySection" class="account-section account-card">
+        <div class="card-header">
+          <h3>Estado de cliente</h3>
+          <p class="helper-text">
+            Sumá compras y mejorá tus beneficios exclusivos.
+          </p>
+        </div>
+        <div id="loyaltyCard" class="loyalty-card">
+          <div id="loyaltyLevel" class="loyalty-level">Nuevo</div>
           <div class="progress-bar">
             <div id="loyaltyProgress" class="progress"></div>
           </div>
           <p id="loyaltyMessage"></p>
         </div>
       </section>
-      <section id="benefitsSection" class="account-section">
-        <h3>Beneficios activos</h3>
-        <div id="benefitsList" class="benefits"></div>
+
+      <section id="benefitsSection" class="account-section account-card">
+        <div class="card-header">
+          <h3>Beneficios activos</h3>
+          <p class="helper-text">
+            Elegimos estos beneficios según tu historial mayorista.
+          </p>
+        </div>
+        <div id="benefitsList" class="benefits-grid"></div>
       </section>
-      <section id="ordersSection" class="account-section">
-        <h3>Mis pedidos</h3>
+
+      <section id="ordersSection" class="account-section account-card">
+        <div class="card-header">
+          <h3>Mis pedidos</h3>
+          <p class="helper-text">
+            Consultá estados, facturas y repetí compras frecuentes.
+          </p>
+        </div>
         <div class="table-wrapper">
           <table class="admin-table" id="userOrdersTable">
             <thead>
@@ -71,8 +303,14 @@
           </table>
         </div>
       </section>
-      <section id="returnsSection" class="account-section">
-        <h3>Mis devoluciones</h3>
+
+      <section id="returnsSection" class="account-section account-card">
+        <div class="card-header">
+          <h3>Mis devoluciones</h3>
+          <p class="helper-text">
+            Seguimiento centralizado de garantías y reclamos.
+          </p>
+        </div>
         <div class="table-wrapper">
           <table class="admin-table" id="userReturnsTable">
             <thead>
@@ -89,60 +327,110 @@
           </table>
         </div>
       </section>
-      <section id="filesSection" class="account-section">
-        <h3>Archivos y facturas</h3>
-        <ul id="invoiceList"></ul>
-        <button id="downloadAll" class="button secondary">
+
+      <section id="filesSection" class="account-section account-card">
+        <div class="card-header">
+          <h3>Archivos y facturas</h3>
+          <p class="helper-text">
+            Descargá todas tus facturas y documentos adjuntos.
+          </p>
+        </div>
+        <ul id="invoiceList" class="document-links"></ul>
+        <button id="downloadAll" class="button secondary small" type="button">
           Descargar todo en ZIP
         </button>
       </section>
-      <section id="profileSection" class="account-section">
-        <h3>Configuración del perfil</h3>
-        <form id="profileForm">
-          <label for="pName">Nombre completo</label>
-          <input type="text" id="pName" />
-          <label for="pEmail">Correo</label>
-          <input type="email" id="pEmail" disabled />
-          <label for="pPhone">Teléfono</label>
-          <input type="text" id="pPhone" />
-          <label for="pAddress">Dirección de facturación</label>
-          <input type="text" id="pAddress" />
-          <label for="pPassword">Contraseña</label>
-          <input
-            type="password"
-            id="pPassword"
-            placeholder="Nueva contraseña"
-          />
-          <label for="pCUIT">CUIT/CUIL</label>
-          <input type="text" id="pCUIT" />
+
+      <section id="profileSection" class="account-section account-card">
+        <div class="card-header">
+          <h3>Configuración del perfil</h3>
+          <p class="helper-text">
+            Actualizá tus datos fiscales y de contacto para facturar sin demoras.
+          </p>
+        </div>
+        <form id="profileForm" class="profile-form">
+          <div class="form-row">
+            <label for="pName">Nombre completo</label>
+            <input type="text" id="pName" />
+          </div>
+          <div class="form-row">
+            <label for="pEmail">Correo</label>
+            <input type="email" id="pEmail" disabled />
+          </div>
+          <div class="form-row">
+            <label for="pPhone">Teléfono</label>
+            <input type="text" id="pPhone" />
+          </div>
+          <div class="form-row">
+            <label for="pAddress">Dirección de facturación</label>
+            <input type="text" id="pAddress" />
+          </div>
+          <div class="form-row">
+            <label for="pPassword">Contraseña</label>
+            <input
+              type="password"
+              id="pPassword"
+              placeholder="Nueva contraseña"
+            />
+          </div>
+          <div class="form-row">
+            <label for="pCUIT">CUIT/CUIL</label>
+            <input type="text" id="pCUIT" />
+          </div>
           <div class="contact-prefs">
             <label><input type="checkbox" id="prefWhatsApp" /> WhatsApp</label>
             <label><input type="checkbox" id="prefEmail" /> Mail</label>
           </div>
-          <button type="submit" class="button primary">Guardar cambios</button>
+          <button type="submit" class="button primary small">
+            Guardar cambios
+          </button>
         </form>
       </section>
-      <section id="supportSection" class="account-section">
-        <h3>Soporte</h3>
+
+      <section id="supportSection" class="account-section account-card">
+        <div class="card-header">
+          <h3>Soporte dedicado</h3>
+          <p class="helper-text">
+            Nuestro equipo mayorista responde en menos de 1&nbsp;hora hábil.
+          </p>
+        </div>
         <p>
-          📞 ¿Necesitás ayuda? Te atendemos por WhatsApp en menos de 1 hora.
+          ¿Necesitás ayuda? Elegí tu canal preferido y un asesor se pondrá en
+          contacto con vos.
         </p>
-        <a id="supportBtn" class="button primary" target="_blank"
-          >Contactar asesor</a
-        >
+        <div class="support-actions">
+          <a id="supportBtn" class="button primary" target="_blank">
+            Contactar asesor
+          </a>
+          <a href="mailto:mayoristas@nerinparts.com.ar" class="button secondary">
+            Enviar correo
+          </a>
+        </div>
       </section>
-      <section id="helpSection" class="account-section">
-        <h3>Centro de ayuda</h3>
-        <ul>
+
+      <section id="helpSection" class="account-section account-card">
+        <div class="card-header">
+          <h3>Centro de ayuda</h3>
+          <p class="helper-text">
+            Respuestas rápidas para tu equipo de compras y administración.
+          </p>
+        </div>
+        <ul class="link-list">
           <li><a href="#">¿Cómo comprar?</a></li>
           <li><a href="#">Métodos de pago</a></li>
           <li><a href="#">Política de garantía</a></li>
           <li><a href="#">¿Dónde veo mi factura?</a></li>
         </ul>
       </section>
-      <section id="metricsSection" class="account-section">
-        <h3>Métricas personales</h3>
-        <div id="metricsInfo"></div>
+
+      <section id="metricsSection" class="account-section account-card">
+        <div class="card-header">
+          <h3>Métricas personales</h3>
+          <p class="helper-text">
+            Visualizá tu performance como distribuidor NERIN.
+          </p>
+        </div>
+        <div id="metricsInfo" class="metrics-grid"></div>
       </section>
     </main>
     <script type="module" src="/js/account.js"></script>
