--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -406,6 +406,24 @@
         </div>
       </div>
 
+      <div id="clientDocumentsModal" class="modal hidden">
+        <div class="modal-content modal-content--wide">
+          <h4 id="clientDocumentsTitle">Documentación fiscal</h4>
+          <p id="clientDocumentsSubtitle" class="modal-subtitle"></p>
+          <div id="clientDocumentsBody" class="client-documents-body">
+            <p class="modal-empty">Seleccioná un cliente para ver sus documentos.</p>
+          </div>
+          <div class="form-actions">
+            <button type="button" class="button secondary" id="refreshClientDocumentsBtn">
+              Actualizar
+            </button>
+            <button type="button" class="button" id="closeClientDocumentsBtn">
+              Cerrar
+            </button>
+          </div>
+        </div>
+      </div>
+
       <section id="ordersSection" class="admin-section" style="display: none">
         <div id="ordersBanner" class="orders-banner"></div>
         <div id="ordersFilters" class="orders-filters">
