Restore storefront header imagery

--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -62,7 +62,7 @@
       data-seo-absolute="href"
       data-product-meta="canonical"
     />
-    <link rel="icon" type="image/png" href="/assets/IMG_3086.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/np-logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
