--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -63,7 +63,7 @@
       name="twitter:image:alt"
       content="Catálogo completo de repuestos Samsung"
     />
-    <link rel="icon" type="image/png" href="/assets/IMG_3086.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/np-logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
