--- a/nerin_final_updated/frontend/contact.html
+++ b/nerin_final_updated/frontend/contact.html
@@ -59,7 +59,7 @@
       name="twitter:image:alt"
       content="Atención personalizada de NERIN"
     />
-    <link rel="icon" type="image/png" href="/assets/IMG_3086.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/np-logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
