--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -71,7 +71,7 @@
       name="twitter:image:alt"
       content="Pantallas Samsung originales listas para enviar"
     />
-    <link rel="icon" type="image/png" href="/assets/IMG_3086.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/np-logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
