Integrate stored customer profiles across flows

--- a/nerin_final_updated/frontend/account.html
+++ b/nerin_final_updated/frontend/account.html
@@ -422,8 +422,30 @@
             <input type="text" id="pPhone" />
           </div>
           <div class="form-row">
-            <label for="pAddress">Dirección de facturación</label>
-            <input type="text" id="pAddress" />
+            <label for="pStreet">Calle</label>
+            <input type="text" id="pStreet" />
+          </div>
+          <div class="form-row form-row--split">
+            <div class="field">
+              <label for="pNumber">Número</label>
+              <input type="text" id="pNumber" />
+            </div>
+            <div class="field">
+              <label for="pFloor">Piso / Depto</label>
+              <input type="text" id="pFloor" />
+            </div>
+          </div>
+          <div class="form-row">
+            <label for="pCity">Localidad</label>
+            <input type="text" id="pCity" />
+          </div>
+          <div class="form-row">
+            <label for="pProvince">Provincia</label>
+            <input type="text" id="pProvince" />
+          </div>
+          <div class="form-row">
+            <label for="pZip">Código postal</label>
+            <input type="text" id="pZip" />
           </div>
           <div class="form-row">
             <label for="pPassword">Contraseña</label>
