--- a/nerin_final_updated/frontend/register.html
+++ b/nerin_final_updated/frontend/register.html
@@ -123,6 +123,75 @@
                   <option value="mayorista">Mayorista</option>
                 </select>
               </div>
+              <div class="form-field">
+                <label for="regPhone">Teléfono de contacto</label>
+                <input
+                  type="tel"
+                  id="regPhone"
+                  name="phone"
+                  autocomplete="tel"
+                  placeholder="Ej: +54 11 5555-0000"
+                />
+              </div>
+              <div class="form-field">
+                <label for="regProvince">Provincia</label>
+                <input
+                  type="text"
+                  id="regProvince"
+                  name="province"
+                  autocomplete="address-level1"
+                  placeholder="Buenos Aires"
+                />
+              </div>
+              <div class="form-field">
+                <label for="regCity">Localidad</label>
+                <input
+                  type="text"
+                  id="regCity"
+                  name="city"
+                  autocomplete="address-level2"
+                  placeholder="Ej: Mar del Plata"
+                />
+              </div>
+              <div class="form-field">
+                <label for="regStreet">Calle</label>
+                <input
+                  type="text"
+                  id="regStreet"
+                  name="street"
+                  autocomplete="address-line1"
+                  placeholder="Av. Siempreviva"
+                />
+              </div>
+              <div class="form-field">
+                <label for="regNumber">Número</label>
+                <input
+                  type="text"
+                  id="regNumber"
+                  name="number"
+                  autocomplete="address-line2"
+                  placeholder="742"
+                />
+              </div>
+              <div class="form-field">
+                <label for="regFloor">Piso / Depto</label>
+                <input
+                  type="text"
+                  id="regFloor"
+                  name="floor"
+                  placeholder="Opcional"
+                />
+              </div>
+              <div class="form-field">
+                <label for="regZip">Código postal</label>
+                <input
+                  type="text"
+                  id="regZip"
+                  name="zip"
+                  autocomplete="postal-code"
+                  placeholder="Ej: 1414"
+                />
+              </div>
             </div>
             <div
               id="regError"
