feat: redesign footer and configuration

--- a/nerin_final_updated/frontend/contact.html
+++ b/nerin_final_updated/frontend/contact.html
@@ -65,8 +65,8 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
     <link rel="stylesheet" href="/style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1" />
-    <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <link rel="stylesheet" href="/components/np-footer.css?v=np-r2" />
+    <script src="/components/np-footer.js?v=np-r2" defer></script>
     <script
       type="application/ld+json"
       id="contact-schema"
@@ -113,6 +113,14 @@
           Solicitar cotización
         </button>
       </form>
+      <section class="contact-faq" id="faq">
+        <h2>Preguntas frecuentes</h2>
+        <ul class="benefits-list">
+          <li>📦 Envíos en menos de 24 hs dentro de CABA.</li>
+          <li>🛠️ Garantía técnica sobre cada Service Pack.</li>
+          <li>💬 Acompañamiento personalizado para talleres y técnicos.</li>
+        </ul>
+      </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/index.js"></script>
