--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -77,8 +77,8 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
     <link rel="stylesheet" href="/style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1" />
-    <script src="/components/np-footer.js?v=np-r1" defer></script>
+    <link rel="stylesheet" href="/components/np-footer.css?v=np-r2" />
+    <script src="/components/np-footer.js?v=np-r2" defer></script>
     <script
       type="application/ld+json"
       id="org-schema"
@@ -177,7 +177,7 @@
       <div id="featuredGrid" class="product-grid"></div>
     </section>
 
-    <section class="container">
+    <section class="container" id="quienes-somos">
       <h2>¿Quiénes somos?</h2>
       <p>
         Somos NERIN Repuestos, una empresa argentina enfocada exclusivamente en
@@ -204,21 +204,7 @@
       </form>
     </section>
 
-    <footer class="container">
-      <p>📞 WhatsApp | 📧 Email | 📍 CABA</p>
-      <p>
-        <a href="https://instagram.com" target="_blank">Instagram</a> |
-        <a href="/index.html">Inicio</a> | <a href="/shop.html">Catálogo</a> |
-        <a href="/contact.html">Contacto</a> |
-        <a href="/seguimiento.html">Seguir mi pedido</a> |
-        <a href="/pages/terminos.html">Términos y Condiciones</a>
-      </p>
-      <p class="legal">
-        NERIN comercializa repuestos Samsung originales Service Pack adquiridos
-        por canales oficiales. No tenemos vínculo directo con Samsung
-        Electronics.
-      </p>
-    </footer>
+    <div id="footer-root"></div>
     <div id="whatsapp-button">
       <a href="https://wa.me/541112345678" target="_blank">
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
