--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -69,8 +69,8 @@
     }
   </style>
     <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
-  <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
-  <script src="/components/np-footer.js?v=np-r1" defer></script>
+  <link rel="stylesheet" href="/components/np-footer.css?v=np-r2">
+  <script src="/components/np-footer.js?v=np-r2" defer></script>
 </head>
 <body>
   <header class="simple-header">
@@ -156,9 +156,7 @@
     </p>
   </main>
 
-  <footer class="container">
-    <p class="legal">© {{FECHA_ACTUALIZACION: 2025}} NERIN</p>
-  </footer>
+  <div id="footer-root"></div>
 </body>
 </html>
 
