feat: actualizar costos de envío y dirección

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -700,7 +700,9 @@
             <thead>
               <tr>
                 <th>Provincia</th>
-                <th>Costo ($)</th>
+                <th data-method="retiro">Retiro en local ($)</th>
+                <th data-method="estandar">Envío estándar ($)</th>
+                <th data-method="express">Envío express ($)</th>
               </tr>
             </thead>
             <tbody></tbody>
