Clarify admin embedding context in calculator banner

--- a/nerin_final_updated/import_calc_frontend/index.html
+++ b/nerin_final_updated/import_calc_frontend/index.html
@@ -10,6 +10,17 @@
     <header>
       <h1>Calculadora Profesional de Costos de Importación</h1>
       <p>Parametrizá costos, impuestos y comisiones para estimar tu precio de venta en Argentina.</p>
+      <div id="apiBaseNotice" class="api-base-notice" hidden>
+        <div class="api-base-main">
+          <span class="api-base-label">API detectada</span>
+          <code data-role="api-base"></code>
+        </div>
+        <p class="api-base-source" data-role="api-source"></p>
+        <div class="api-base-context">
+          <p class="api-base-context__label" data-role="embedding-label"></p>
+          <p class="api-base-context__detail" data-role="embedding-detail"></p>
+        </div>
+      </div>
     </header>
 
     <main>
