--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -798,7 +798,7 @@
                 Si preferís abrirla en otra pestaña, usá este acceso directo:
               </span>
               <a
-                href="../import_calc_frontend/index.html"
+                href="/import_calc_frontend/index.html"
                 target="_blank"
                 rel="noopener noreferrer"
                 data-i18n="calculator.linkText"
@@ -809,7 +809,7 @@
           </header>
           <div class="calculator-frame">
             <iframe
-              src="../import_calc_frontend/index.html"
+              src="/import_calc_frontend/index.html"
               title="Calculadora de costos de importación"
               loading="lazy"
               referrerpolicy="no-referrer"
