Add proxy for import calculator API

--- a/nerin_final_updated/import_calc_frontend/index.html
+++ b/nerin_final_updated/import_calc_frontend/index.html
@@ -213,6 +213,7 @@
     <footer>
       <small>Zona horaria: America/Argentina/Buenos_Aires • API <code>/api</code></small>
     </footer>
+    <script>window.API_BASE = '/calc-api';</script>
     <script src="app.js"></script>
   </body>
 </html>
