Clarify customs exchange rate in import calculator

--- a/nerin_final_updated/import_calc_frontend/index.html
+++ b/nerin_final_updated/import_calc_frontend/index.html
@@ -70,6 +70,9 @@
             <div class="form-group">
               <label for="exchangeRate">TC Aduana</label>
               <input type="number" step="0.01" id="exchangeRate" name="exchangeRate" value="980" required />
+              <p class="form-hint">
+                Utilizá el tipo de cambio que publica Aduana (dólar oficial/Banco Nación) expresado en ARS por cada USD.
+              </p>
             </div>
             <div class="form-group">
               <label for="diRate">Arancel (DI)</label>
@@ -166,6 +169,7 @@
 
       <section class="card" id="resultsCard" hidden>
         <h2>Resultados</h2>
+        <div id="exchangeRateInfo" class="results-meta" hidden></div>
         <div id="summary"></div>
         <table id="breakdownTable">
           <thead>
